# dc1-platform

./: .cursorrules  .env.example  .gitignore  2026-03-19-sprint-report.md  AGENTS.md  AGENT_LOG.md  CLAUDE.md  COPYWRITER-PAPERCLIP-STATUS-2026-03-24.md  DC1-AGENT-BRIEFING.md  DC1-HANDOVER.md  DCP-AGENT-BRIEFING.md  DCP641-UNBLOCK-SUMMARY.md  DEPLOYMENT.md  Dockerfile.frontend  PAPERCLIP-INSTRUCTIONS.md  PHASE1-IDE-EXTENSION-COORDINATION.md  PHASE2-CODE-REVIEW-DCP720.md  PHASE2-UX-NEXT-STEPS-2026-03-24.md  README.md  SECURITY.md  UI-UX-PHASE2-PR-STATUS-2026-03-24.md  UI-UX-SPECIALIST-STATUS-2026-03-24.md  URGENT-GITHUB-PR-CREATION-GUIDE.md  docker-compose.prod.yml  middleware.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vercel.json  vitest.config.ts
.claude/: settings.local.json
app/: error.tsx  globals.css  head.tsx  layout.tsx  not-found.tsx  page.tsx
backend/: .env.example  Dockerfile  api-contracts.yaml  ecosystem.config.js  jest.config.js  openapi.yaml  package-lock.json  package.json  sync_providers.js
contracts/: .env.example  .gitignore  BASE_SEPOLIA_LAUNCH_CHECKLIST.md  README.md  hardhat.config.js  (+2 more)
sdk/python/: README.md  pyproject.toml
sdk/python/dc1/: __init__.py  client.py  exceptions.py  http.py  models.py
sdk/python/dc1/resources/: __init__.py  jobs.py  providers.py  wallet.py
sdk/python/dc1_provider/: __init__.py  _http.py  client.py  exceptions.py  models.py
sdk/python/examples/: heartbeat.py  image_gen.py  list_jobs.py  llm_inference.py  register.py  vllm_endpoint.py
(+1970 files in other folders)
